将流水线构建方法从Pipes移动到Pipe，移除Pipes类，完善构建方法注释；移除INFINITE标记；