@@ -2,7 +2,6 @@ package com.oyealex.pipe.basis;
 
 import com.oyealex.pipe.PipeTestFixture;
 import com.oyealex.pipe.assist.IntBox;
-import com.oyealex.pipe.basis.api.Pipe;
 import com.oyealex.pipe.basis.functional.LongBiFunction;
 import org.junit.jupiter.api.Disabled;
 import org.junit.jupiter.api.DisplayName;
@@ -13,7 +12,6 @@ import java.util.List;
 import java.util.function.Function;
 import java.util.stream.Stream;
 
-import static com.oyealex.pipe.basis.Pipes.list;
 import static java.util.stream.Collectors.toList;
 import static org.junit.jupiter.api.Assertions.assertAll;
 import static org.junit.jupiter.api.Assertions.assertEquals;
@@ -42,7 +40,10 @@ class PipeFlatMapTest extends PipeTestFixture {
         List<Integer> sample = generateIntegerList();
         assertEquals(
             sample.stream().map(PipeTestFixture::generateIntegerStrList).flatMap(Collection::stream).collect(toList()),
-            list(sample).map(PipeTestFixture::generateIntegerStrList).flatMap(Pipes::list).toList());
+            Pipe.list(sample)
+                .map(PipeTestFixture::generateIntegerStrList)
+                .flatMap(list -> Pipe.list((List<? extends String>) list))
+                .toList());
     }
 
     @Test
@@ -51,10 +52,12 @@ class PipeFlatMapTest extends PipeTestFixture {
         List<String> sample = generateIntegerStrList();
         IntBox counter = IntBox.box();
         assertEquals(sample.stream()
-                .map(ignored -> generateIntegerStrList(counter.getAndIncrement()))
-                .flatMap(Collection::stream)
-                .collect(toList()),
-            list(sample).flatMapOrderly((order, value) -> list(generateIntegerStrList((int) order))).toList());
+            .map(ignored -> generateIntegerStrList(counter.getAndIncrement()))
+            .flatMap(Collection::stream)
+            .collect(toList()), Pipe.list(sample).flatMapOrderly((order, value) -> {
+            List<? extends String> list = generateIntegerStrList((int) order);
+            return Pipe.list(list);
+        }).toList());
     }
 
     @Test
@@ -63,7 +66,7 @@ class PipeFlatMapTest extends PipeTestFixture {
         List<Integer> sample = generateIntegerList();
         assertEquals(
             sample.stream().map(PipeTestFixture::generateIntegerStrList).flatMap(Collection::stream).collect(toList()),
-            list(sample).flatMapCollection(PipeTestFixture::generateIntegerStrList).toList());
+            Pipe.list(sample).flatMapCollection(PipeTestFixture::generateIntegerStrList).toList());
     }
 
     @Test
@@ -71,10 +74,11 @@ class PipeFlatMapTest extends PipeTestFixture {
     void should_flat_map_to_singleton_pipe_rightly() {
         List<String> sample = generateIntegerStrList();
         assertEquals(sample.stream().map(Stream::of).map(stream -> stream.collect(toList())).collect(toList()),
-            list(sample).flatMapSingleton().map(Pipe::toList).toList());
+            Pipe.list(sample).flatMapSingleton().map(Pipe::toList).toList());
     }
 
     @Test
+    @DisplayName("能正确将元素扁平映射为基础类型流水线")
     @Disabled("扁平映射为基础类型的流水线API尚未实现")
     void should_flat_map_to_pipe_with_primitive_element_type() {}
 
